# mutineer

./: .dockerignore  .gitignore  AGENT.md  BBS_DIRECTORY.md  BUCC_TODO.md  CMakeLists.txt  DELTA_BBS.md  Dockerfile  FUNCTIONAL_MUTINEER.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  feature-matrix.md  index.html  issues_bbs  mutineer_logo.sh
SPECS/: PLANK.md
archived-feature-matrices/: feature-matrix-20260713T230411Z.md
art/: 2MANYCAL.ans  2MANYCAL.asc  NOACCESS.ans  NOACCESS.asc  NOCREDTS.ans  NOCREDTS.asc  NOTLEFTA.ans  NOTLEFTA.asc  PWCHANGE.ans  PWCHANGE.asc  goodbye.ans  goodbye.asc  help.ans  help.asc  logon.ans  motd.ans  multilog.ans  mutineer.ans  mutineer.asc  newuser.ans  newuser.asc  sysop.ans  sysop.asc  welcome.ans  welcome.asc  welcome.txt  wfc.ans  wfc.asc
build-final-non100/: Makefile  coved  mutineer-netmail-export  test_acs  test_file_cmds  test_plank_bundle  test_plank_crypto  test_plank_object  test_plank_policy  test_scheduler  test_smoke
build-final-werror/: Makefile  bucc  mutineer-initbbs  mutineer-maint  mutineer-stats  mutineer-userpack  plank-offline  plankctl  plankd  plankpack  test_buccaneer_bbs  test_docs_consistency  test_doors  test_menu  test_menu_template  test_plank_link  test_plank_route  test_plank_store  test_plugin
build-first10-non100/: Makefile  mutineer-initbbs  mutineer-maint  mutineer-msgpack  mutineer-qwkgen  mutineer-stats  mutineer-userpack  plankctl  test_acs  test_buccaneer_bbs  test_docs_consistency  test_file_cmds  test_mci  test_menu_template  test_plank_bundle  test_plugin  test_smoke  test_start_menu  test_tools
build-first10-werror/: Makefile  bucc  coved  mutineer  mutineer-filepack  mutineer-netmail-export  mutineer-validate  plank-offline  plankd  plankpack  test_buccaneer_host  test_doors  test_menu  test_plank_link  test_plank_object  test_plank_policy  test_plank_route  test_plank_store  test_plank_temp_policy  test_scheduler
build-first15-non100/: Makefile  coved  mutineer  mutineer-filepack  mutineer-initbbs  mutineer-maint  mutineer-msgpack  mutineer-netmail-export  mutineer-qwkgen  mutineer-stats  mutineer-userpack  mutineer-validate  plank-offline  plankctl  plankd  plankpack  test_acs  test_doors  test_fsedit  test_mci  test_menu  test_menu_template  test_plank_bundle  test_plank_link  test_plank_object  test_plank_policy  test_plank_route  test_plank_store  test_plugin  test_scheduler  test_smoke  test_tools
build-first5-non100/: Makefile  bucc  mutineer  test_buccaneer_vm  test_doors  test_file_cmds  test_plank_crypto  test_plank_route
build-next15-asan/: Makefile  mutineer  mutineer-filepack  mutineer-validate  plankctl  plankd  test_plank_cbor
build-next15-non100/: Makefile  coved  mutineer-msgpack  mutineer-qwkgen  plankpack  test_first15_matrix  test_mci  test_plank_bbs_integration  test_plank_link  test_plank_policy  test_plank_store
build-next15-werror/: Makefile  bucc  mutineer  plank-offline  test_buccaneer_vm  test_fsedit  test_plank_bundle  test_plank_object  test_plank_route  test_tools
build-next5-non100/: Makefile  mutineer  mutineer-maint  mutineer-qwkgen  mutineer-userpack  mutineer-validate  plankctl  plankpack  test_acs  test_buccaneer_host  test_doors  test_fsedit  test_mci  test_menu_template  test_plank_bundle  test_plank_cbor  test_plank_link  test_plugin  test_scheduler  test_smoke  test_tools
build-p0-first5-review/: Makefile  bucc  mutineer-initbbs  plank-offline  test_buccaneer_host  test_doors  test_menu  test_plank_policy  test_plank_store  test_plugin
build-p1-review/: Makefile  coved  mutineer  mutineer-filepack  mutineer-msgpack  mutineer-netmail-export  mutineer-stats  plankd  test_plank_object
build-remaining-non100/: Makefile  mutineer  mutineer-filepack  mutineer-netmail-export  mutineer-qwkgen  mutineer-stats  plank-offline  plankctl  plankpack  test_acs  test_audit_runtime  test_docs_consistency  test_file_cmds  test_mci  test_plank_bundle  test_plank_link  test_plugin  test_process_supervision  test_smoke  test_temp_paths  test_tools
build-remaining-werror/: Makefile  coved  mutineer-initbbs  mutineer-maint  mutineer-msgpack  mutineer-userpack  mutineer-validate  plankd  test_buccaneer_vm  test_doors  test_menu  test_menu_template  test_plank_object  test_plank_policy  test_plank_route  test_plank_store  test_scheduler  test_string_builders  test_telnet_password
conf/: mutineer.conf
docker/: Dockerfile  compose.yml  entrypoint.sh  mutineer.docker.conf  mutineer.wfc.conf
docs/: ACS_MCI.md  BBS_DIRECTORY_UPDATER_INTEGRATION.md  BUILD_PACKAGE.md  FILES.md  INSTALL_FROM_SHAR.md  MCI.md  PARITY.md  PLANK_ADMIN.md  SPEC.md  TEMPLATES.md  WHY.md  admin.md  architecture.html  architecture.md  bbslib.md  buccaneer.md  chat-and-social.html  chat-and-social.md  cli-tools.html  cli-tools.md  configuration.md  console-protocol.md  coverage.md  customizing-your-bbs.md  deployment.md  developer-guide.html  developer-guide.md  doors-and-scripting.html  doors-and-scripting.md  doors_protocols.md  files-and-protocols.md  getting-started.html  getting-started.md  index.html  index.md  leaderboards.md  menus-and-ui.html  menus-and-ui.md  messages-and-mail.html  messages-and-mail.md  (+14 more)
include/: bbs_acs.h  bbs_ansi.h  bbs_archive.h  bbs_auth.h  bbs_chat.h  bbs_config.h  bbs_console_service.h  bbs_db.h  bbs_doors.h  bbs_fido_netmail.h  bbs_file_cmds.h  bbs_flags.h  bbs_hash.h  bbs_log.h  bbs_maint.h  bbs_mci.h  bbs_menu.h  bbs_menu_template.h  bbs_msg_cmds.h  bbs_msg_defs.h  bbs_plugin_api.h  bbs_plugin_loader.h  bbs_plugin_registry.h  bbs_process.h  bbs_qwk.h  bbs_scheduler.h  bbs_session.h  bbs_startup.h  bbs_telnet.h  bbs_util.h  bbs_wfc.h  bbslib.h
menus/: chat.ans  chat.asc  chat.mnu  door.ans  door.asc  door.mnu  file.ans  file.asc  file.mnu  logon.ans  logon.asc  logon.mnu  main.ans  main.asc  main.mnu  message.ans  message.asc  message.mnu  sysop.ans  sysop.asc  sysop.mnu  vote.ans  vote.asc  vote.mnu
packaging/: Dockerfile.dist  Makefile.fragment  README.md  make-self-extracting-installer.sh  package.sh  setup.sh
scripts/: backup  (+24 more)
(+305 files in other folders)
